# weather_data

./: .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml
.github/workflows/: ci.yml
app/: main.py  tasks.py
tests/: test_main.py  test_tasks.py
