[project]
name = "celery-poc"
version = "0.1.0"
description = ""
authors = [
    {name = "deck451",email = "deck.45100@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "fastapi (>=0.115.12,<0.116.0)",
    "celery (>=5.5.2,<6.0.0)",
    "httpx (>=0.28.1,<0.29.0)",
    "uvicorn (>=0.34.2,<0.35.0)",
    "redis (>=6.1.0,<7.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.group.dev.dependencies]
mypy = "^1.15.0"

[tool.mypy]
ignore_missing_imports = true
